[package]
name = "log-guardian-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10"
ndarray = "0.15"
linfa = "0.7"
linfa-clustering = "0.7"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
rayon = "1.8"
